# dns-server-rust

./: .gitignore  Cargo.toml  README.md  run.sh
.codecrafters/: run.sh
src/: dns_message.rs  main.rs  process.rs
src/dns/: answer.rs  enums.rs  header.rs  message.rs  mod.rs  question.rs
